--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ charset-normalizer==2.0.4
 dj-database-url==0.5.0
 Django==3.2.6
 gunicorn==20.1.0
+heroku==0.1.4
 idna==3.2
 Pillow==8.3.1
 psycopg2==2.9.1
+python-dateutil==1.5
 pytz==2021.1
 requests==2.26.0
 sqlparse==0.4.1
